# production-control

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  batches-export-check.xlsx  docker-compose.yml  production_control_implementation_plan.md  pyproject.toml  q
alembic/: env.py
alembic/versions/: 20260417_0001_init_models.py
scripts/: init_minio.py
src/: __init__.py  celery_app.py  main.py
src/api/v1/routers/: __init__.py  analytics.py  batches.py  products.py  tasks.py  webhooks.py
src/api/v1/schemas/: analytics.py  batch.py  common.py  product.py  task.py  webhook.py
src/core/: cache.py  config.py  database.py  dependencies.py  exceptions.py  rate_limit.py
src/data/models/: __init__.py  batch.py  product.py  webhook.py  work_center.py
src/data/repositories/: __init__.py  batch_repository.py  product_repository.py  webhook_repository.py  work_center_repository.py
src/domain/exceptions/: __init__.py
src/domain/services/: __init__.py  analytics_service.py  batch_service.py  product_service.py  webhook_service.py
src/storage/: __init__.py  minio_service.py
src/tasks/: __init__.py  aggregation.py  exports.py  imports.py  reports.py  scheduled.py  webhooks.py
src/utils/: __init__.py  excel_generator.py  excel_parser.py  hmac_utils.py  pdf_generator.py
tests/: conftest.py  test_api_aggregation.py  test_batch_service.py  test_cache_analytics.py  test_import_export.py  test_reports.py  test_scheduled_tasks.py  test_webhooks.py
