[tool.poetry]
name = "production-control"
version = "0.1.0"
description = "Production control service bootstrap with FastAPI and supporting infrastructure."
authors = ["Anton <anton@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
pydantic = "^2.11.0"
pydantic-settings = "^2.10.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.16.0"
celery = "^5.5.0"
redis = "^6.0.0"
aio-pika = "^9.5.0"
httpx = "^0.28.0"
minio = "^7.2.0"
openpyxl = "^3.1.0"
pandas = "^2.2.0"
python-multipart = "^0.0.20"
tenacity = "^9.1.0"
structlog = "^25.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.0"
ruff = "^0.12.0"
mypy = "^1.17.0"
faker = "^37.5.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
